add transactions for card update function
